Hack fix overflow-x bug

--- a/static/css/globals.css
+++ b/static/css/globals.css
@@ -13,7 +13,9 @@
 
     --breakpoint-medium: 30em;
 }
-
+body {
+    overflow-x:hidden;
+}
 
 footer {
     margin-top: 2rem;
